--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
@@ -1490,8 +1490,8 @@
                     tipoEN = 'BLA';
                     break;
                 case @Bitacoras.Util.SCDM_solicitud_rel_item_material_tipo.SHEARING:
-                    tipoES = 'SHE';
-                    tipoEN = 'SHE';
+                    tipoES = 'SHR';
+                    tipoEN = 'SHR';
                     break;
                 case @Bitacoras.Util.SCDM_solicitud_rel_item_material_tipo.PLATINA_SOLDADA:
                     tipoES = 'PLS';
