--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCopperAndBrass.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCopperAndBrass.cshtml
@@ -1106,10 +1106,16 @@
                         else {
                             if (num == 0 && cero)
                                 toastMixin.fire({ title: 'Ingrese un número válido.', icon: 'warning' });
-                            if (positivo && !negativo && !cero)
+                            else if (positivo && !negativo && !cero)
                                 toastMixin.fire({ title: 'Sólo se permiten números positivos.', icon: 'warning' });
-                            if (!positivo && negativo && !cero)
+                            else if (!positivo && negativo && !cero)
                                 toastMixin.fire({ title: 'Sólo se permiten números negativos.', icon: 'warning' });
+                            else if (positivo && !negativo && cero)
+                                toastMixin.fire({ title: 'Sólo se permiten números positivos y cero.', icon: 'warning' });
+                            else if (!positivo && negativo && cero)
+                                toastMixin.fire({ title: 'Sólo se permiten números negativos y cero.', icon: 'warning' });
+                            else
+                                toastMixin.fire({ title: 'Número no válido. Favor de verificar', icon: 'warning' });
 
                             callback(false);
                         }
